--- a/T1_explot_limpi.ipynb
+++ b/T1_explot_limpi.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bc5ce8ea",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "[1061 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "476f8af6",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1061 entries, 0 to 1060\n",
-      "Data columns (total 9 columns):\n",
+      "Data columns (total 8 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
       " 0   Brand              1061 non-null   object \n",
@@ -259,9 +259,8 @@
       " 5   Owner              1061 non-null   object \n",
       " 6   KM_Driven          1061 non-null   int64  \n",
       " 7   Ex_Showroom_Price  626 non-null    float64\n",
-      " 8   Age                1061 non-null   int64  \n",
-      "dtypes: float64(1), int64(4), object(4)\n",
-      "memory usage: 74.7+ KB\n"
+      "dtypes: float64(1), int64(3), object(4)\n",
+      "memory usage: 66.4+ KB\n"
      ]
     }
    ],
@@ -280,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "5b8feca2",
    "metadata": {},
    "outputs": [
@@ -469,7 +468,7 @@
        "max             -      880000.0         1278000.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "0c98a09b",
    "metadata": {},
    "outputs": [
@@ -621,7 +620,7 @@
        "[1061 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "e61a7148",
    "metadata": {},
    "outputs": [
@@ -651,7 +650,7 @@
        "('Bajaj', 'Bajaj Pulsar 150')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "8abc2ade",
    "metadata": {},
    "outputs": [
@@ -700,7 +699,7 @@
        "Name: Brand, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "803cf549",
    "metadata": {},
    "outputs": [
@@ -826,7 +825,7 @@
        "[1061 rows x 2 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "34072712",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1049,7 @@
        "[368 rows x 9 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "30575ebc",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1142,7 @@
        "621    Harley      Harley-Davidson Street 750         330000"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "371b093c",
    "metadata": {},
    "outputs": [
@@ -1255,7 +1254,7 @@
        "Age                1.000000  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "7ffd285d",
    "metadata": {},
    "outputs": [
@@ -1629,7 +1628,7 @@
        "1060  1st owner      60000                NaN   13  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "8d020025",
    "metadata": {},
    "outputs": [
@@ -1725,13 +1724,50 @@
        "Hero Honda CBZ extreme  51000.0  72500.0  90000.0  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[df['Model'].isin(['Bajaj Discover 100', 'Hero Honda CBZ extreme'])].groupby('Model')['KM_Driven'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "991e3b41",
+   "metadata": {},
+   "source": [
+    "### 11. Nueva Estadística [Taller 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ad9664b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      1061.000000\n",
+       "mean      59638.151744\n",
+       "std       56304.291973\n",
+       "min        5000.000000\n",
+       "25%       28000.000000\n",
+       "50%       45000.000000\n",
+       "75%       70000.000000\n",
+       "max      760000.000000\n",
+       "Name: Selling_Price, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Selling_Price'].describe()"
    ]
   }
  ],
