12tth command in the created branch

--- a/T1_explot_limpi.ipynb
+++ b/T1_explot_limpi.ipynb
@@ -1769,6 +1769,24 @@
    "source": [
     "df['Selling_Price'].describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "737244f1",
+   "metadata": {},
+   "source": [
+    "### 12. Nueva Estadística en la rama creada [Taller 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d9549c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Selling_Price'].mean()"
+   ]
   }
  ],
  "metadata": {
