13th command in a public repository

--- a/T1_explot_limpi.ipynb
+++ b/T1_explot_limpi.ipynb
@@ -1798,6 +1798,229 @@
    "source": [
     "df['Selling_Price'].mean()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f53a66b",
+   "metadata": {},
+   "source": [
+    "### 13. Nueva Estadística en la rama main ya pública [Taller 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "50262a95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Brand</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Selling_Price</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Seller_Type</th>\n",
+       "      <th>Owner</th>\n",
+       "      <th>KM_Driven</th>\n",
+       "      <th>Ex_Showroom_Price</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Honda CB Twister</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>12566</td>\n",
+       "      <td>49150.0</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>Yamaha</td>\n",
+       "      <td>Yamaha Ray Z</td>\n",
+       "      <td>75000</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>15000</td>\n",
+       "      <td>52949.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>Honda Activa 3G</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>54605.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>Hero</td>\n",
+       "      <td>Hero Splendor Plus i3s</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>55600.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>Hero</td>\n",
+       "      <td>Hero Splendor Plus i3s</td>\n",
+       "      <td>65000</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>55600.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1032</th>\n",
+       "      <td>KTM</td>\n",
+       "      <td>KTM RC 200</td>\n",
+       "      <td>185000</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1042</th>\n",
+       "      <td>Bajaj</td>\n",
+       "      <td>Bajaj Pulsar 150</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>24000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1055</th>\n",
+       "      <td>Royal</td>\n",
+       "      <td>Royal Enfield Electra 5 S</td>\n",
+       "      <td>99000</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>28000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1056</th>\n",
+       "      <td>Royal</td>\n",
+       "      <td>Royal Enfield Electra 5 S</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1058</th>\n",
+       "      <td>Bajaj</td>\n",
+       "      <td>Bajaj Pulsar 220 DTS-i</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Individual</td>\n",
+       "      <td>1st owner</td>\n",
+       "      <td>16000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>368 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Brand                      Model  Selling_Price  Year Seller_Type  \\\n",
+       "35     Honda           Honda CB Twister          70000  2014  Individual   \n",
+       "102   Yamaha               Yamaha Ray Z          75000  2017  Individual   \n",
+       "138    Honda            Honda Activa 3G          60000  2015  Individual   \n",
+       "161     Hero     Hero Splendor Plus i3s          70000  2019  Individual   \n",
+       "162     Hero     Hero Splendor Plus i3s          65000  2019  Individual   \n",
+       "...      ...                        ...            ...   ...         ...   \n",
+       "1032     KTM                 KTM RC 200         185000  2019  Individual   \n",
+       "1042   Bajaj           Bajaj Pulsar 150          70000  2017  Individual   \n",
+       "1055   Royal  Royal Enfield Electra 5 S          99000  2012  Individual   \n",
+       "1056   Royal  Royal Enfield Electra 5 S          90000  2012  Individual   \n",
+       "1058   Bajaj     Bajaj Pulsar 220 DTS-i          60000  2014  Individual   \n",
+       "\n",
+       "          Owner  KM_Driven  Ex_Showroom_Price  Age  \n",
+       "35    1st owner      12566            49150.0   11  \n",
+       "102   1st owner      15000            52949.0    8  \n",
+       "138   1st owner      30000            54605.0   10  \n",
+       "161   1st owner       3000            55600.0    6  \n",
+       "162   1st owner       1000            55600.0    6  \n",
+       "...         ...        ...                ...  ...  \n",
+       "1032  1st owner       6000                NaN    6  \n",
+       "1042  1st owner      24000                NaN    8  \n",
+       "1055  1st owner      28000                NaN   13  \n",
+       "1056  1st owner      40000                NaN   13  \n",
+       "1058  1st owner      16000                NaN   11  \n",
+       "\n",
+       "[368 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Selling_Price']>df['Selling_Price'].mean()]"
+   ]
   }
  ],
  "metadata": {
