Se genera un analisis descriptivo de la variable de precio de venta

--- a/T1_explot_limpi.ipynb
+++ b/T1_explot_limpi.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bc5ce8ea",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "[1061 rows x 8 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "476f8af6",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5b8feca2",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "max             -      880000.0         1278000.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0c98a09b",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
        "[1061 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e61a7148",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
        "('Bajaj', 'Bajaj Pulsar 150')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8abc2ade",
    "metadata": {},
    "outputs": [
@@ -699,7 +699,7 @@
        "Name: Brand, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "803cf549",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
        "[1061 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "34072712",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1049,7 @@
        "[368 rows x 9 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "30575ebc",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1142,7 @@
        "621    Harley      Harley-Davidson Street 750         330000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "371b093c",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1254,7 @@
        "Age                1.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7ffd285d",
    "metadata": {},
    "outputs": [
@@ -1628,7 +1628,7 @@
        "1060  1st owner      60000                NaN   13  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "8d020025",
    "metadata": {},
    "outputs": [
@@ -1724,7 +1724,7 @@
        "Hero Honda CBZ extreme  51000.0  72500.0  90000.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "ad9664b2",
    "metadata": {},
    "outputs": [
@@ -1761,7 +1761,7 @@
        "Name: Selling_Price, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,17 +1780,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "8d9549c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "59638.151743638075"
+       "np.float64(59638.151743638075)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,11 +1798,48 @@
    "source": [
     "df['Selling_Price'].mean()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8d5f5060",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      1061.000000\n",
+       "mean      59638.151744\n",
+       "std       56304.291973\n",
+       "min        5000.000000\n",
+       "25%       28000.000000\n",
+       "50%       45000.000000\n",
+       "75%       70000.000000\n",
+       "max      760000.000000\n",
+       "Name: Selling_Price, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Selling_Price'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3193f1b1",
+   "metadata": {},
+   "source": [
+    "Se agregó una descripción estadistica del precio de venta\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1816,7 +1853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
